enviroment variables from deployment k8s to app

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,3 +17,6 @@ spec:
       containers:
         - name: "learn-k8s"
           image: "thiagosgdev/learn-k8s:latest"
+          env:
+            - name: TEST
+              value: "IT WORKS!!!"
