--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -8,5 +8,6 @@ spec:
   type: ClusterIP
   ports:
   - name: learn-k8s-service
-    port: 5000
+    port: 4000
+    targetPort: 5000
     protocol: TCP
