--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: "learn-k8s"
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -20,6 +20,24 @@ spec:
           envFrom:
             - configMapRef:
                 name: learn-k8s-env
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 4000
+            periodSeconds: 3
+            failureThreshold: 1
+            initialDelaySeconds: 10
+
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 4000
+            periodSeconds: 5
+            failureThreshold: 1
+            timeoutSeconds: 1
+            successThreshold: 1
+            initialDelaySeconds: 15
+
           #env:
           #  - name: TEST
           #    valueFrom:
